# AgentWhetters-general-purple

./: .env.example  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: __init__.py  agent.py  executor.py  messenger.py  server.py  shell_adapter.py  structured_chat.py  tagged_action_adapter.py  tau2_adapter.py  toolchat_adapter.py  tools.py  usage.py  vuln_adapter.py
tests/: test_agent.py  test_local.py
