[project]
name = "agentwhetters-general"
version = "0.1.0"
description = "A general-purpose purple agent for AgentBeats Sprint 4"
requires-python = ">=3.11"
dependencies = [
    "google-adk[a2a,extensions]>=2.0.0",
    "openai>=1.82.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.0",
]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
